# spec4ml_py

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: README.md
spec4ml_py/: __init__.py  evaluation_functions.py  evaluation_functions_old.py  file_utils.py  libraries.py  tpot_compat.py
tests/: test_evaluation_functions_refactor.py  test_import.py
