[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec4ml_py"
version = "0.0.1"
authors = [
  { name="Omar Anwar Elkadi", email="omar.elkadi@live.com" },
]
description = "Python package for handling and analyzing spectral data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests", # Example dependency
    "numpy>=1.20",
]

[project.urls]
"Homepage" = ""https://github.com/elkadi/spec4ml_py"
"Bug Tracker" = "https://github.com/elkadi/spec4ml_py/issues"
