
[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "spec4ml-py"
# Use dynamic version from the package __init__.py to avoid drift
dynamic = ["version"]
description = "a package for handling and analyzing spectral data with special considerations for machine learning applications"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Omar Anwar Elkadi", email = "Omar.elkadi@live.com" },
]
keywords = ["spectroscopy", "machine-learning", "preprocessing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
]

[project.urls]
Homepage = "https://github.com/elkadi/spec4ml_py"
Issues = "https://github.com/elkadi/spec4ml_py/issues"
Documentation = "https://github.com/elkadi/spec4ml_py#readme"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "mypy>=1.6",
  "ruff>=0.5",
  "black>=24",
  "build>=1.2",
  "twine>=5",
  "pre-commit>=3.7",
]

[tool.hatch.version]
path = "spec4ml_py/__init__.py"

[tool.hatch.build]
include = [
  "spec4ml_py/**",
  "README.md",
  "LICENSE",
  "CITATION.cff",
  "CHANGELOG.md",
]
